<resources>

    <string name="app_name">GDK Kitchen Sink</string>
    <string name="tap_for_menu">Tap to see menu</string>
    <string name="footnote">This is a card footnote.</string>

    <string name="empty_string"></string>

    <!-- Menu items -->
    <string name="camera">Camera</string>
    <string name="voice_input">Voice Input</string>
    <string name="dpad_input">D-Pad input</string>
    <string name="gesture_input">Gesture input</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="GPS">GPS Live Card</string>
    <string name="light">Light sensor</string>
    <string name="gravity">Gravity sensor</string>
    <string name="gyroscope">Gyroscope sensor</string>
    <string name="rotation">Rotation sensor</string>

    <!-- DPad & Gestures Input -->
    <string name="dpad_instructions">Tap, click camera button, or swipe down</string>
    <string name="gesture_instructions">Do a gesture on the touchpad</string>
    <string name="tap">Tap</string>
    <string name="two_tap">Two Tap</string>
    <string name="three_tap">Three Tap</string>
    <string name="long_press">Long Press</string>
    <string name="two_long_press">Two Long Press</string>
    <string name="three_long_press">Three Long Press</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="two_swipe_left">Two Swipe Left</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="two_swipe_right">Two Swipe Right</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="two_swipe_up">Two Swipe Up</string>
    <string name="swipe_down">Swipe down</string>
    <string name="two_swipe_down">Two Swipe Down</string>
    <string name="camera_button">Camera button clicked</string>
    <string name="swipe_to_go_back">Swipe down again to go back</string>

    <!-- Text to speech -->
    <string name="gettysburg_address">Four score and seven years ago&#8230;</string>
    <string name="tap_to_read">Tap to read aloud</string>

    <!-- Accelerometer display -->
    <string name="accelerometer_title">Accelerometer Readings</string>
    <string name="gravity_x">Gravity - X: </string>
    <string name="gravity_y">Gravity - Y: </string>
    <string name="gravity_z">Gravity - Z: </string>
    <string name="linear_acceleration_x">Linear Accel - X: </string>
    <string name="linear_acceleration_y">Linear Accel - Y: </string>
    <string name="linear_acceleration_z">Linear Accel - Z: </string>

    <!-- GPS display -->
    <string name="gps_title">GPS</string>
    <string name="waiting_for_location">Waiting for location&#8230;</string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="stop">Stop</string>

    <string name="glass_voice_trigger">kitchen sink</string>
</resources>
