<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/titleTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="false"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_x"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gravityXTextView"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/titleTextView" android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gravityXValueTextView"
            android:layout_alignTop="@+id/gravityXTextView"
            android:layout_alignLeft="@+id/gravityYValueTextView"
            android:layout_toRightOf="@+id/gravityXTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_y"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gravityYTextView"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/gravityXTextView"
            android:layout_alignLeft="@+id/gravityXTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gravityYValueTextView"
            android:layout_above="@+id/gravityZTextView"
            android:layout_alignLeft="@+id/gravityZValueTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_z"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gravityZTextView"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/gravityYTextView"
            android:layout_alignLeft="@+id/gravityYTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gravityZValueTextView"
            android:layout_alignTop="@+id/gravityZTextView"
            android:layout_toRightOf="@+id/gravityYTextView" android:layout_marginLeft="25dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_acceleration_x"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/linearAccelerationXTextView"
            android:layout_alignTop="@+id/gravityXValueTextView"
            android:layout_alignRight="@+id/titleTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/linearAccelerationXValueTextView"
            android:layout_alignTop="@+id/linearAccelerationXTextView"
            android:layout_toRightOf="@+id/linearAccelerationXTextView"
            android:layout_marginLeft="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_acceleration_y"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/linearAccelerationYTextView"
            android:layout_alignTop="@+id/gravityYTextView"
            android:layout_alignLeft="@+id/linearAccelerationXTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/linearAccelerationYValueTextView"
            android:layout_alignTop="@+id/linearAccelerationYTextView"
            android:layout_alignLeft="@+id/linearAccelerationXValueTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_acceleration_z"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/linearAccelerationZTextView"
            android:layout_alignTop="@+id/gravityZTextView"
            android:layout_alignLeft="@+id/linearAccelerationYTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/linearAccelerationZValueTextView"
            android:layout_alignTop="@+id/linearAccelerationZTextView"
            android:layout_alignLeft="@+id/linearAccelerationYValueTextView"/>
</RelativeLayout>